; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_url.c_call_extract_if_dead.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_url.c_call_extract_if_dead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }
%struct.prunedead = type { %struct.connectdata*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i8*)* @call_extract_if_dead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @call_extract_if_dead(%struct.connectdata* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.connectdata*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.prunedead*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.prunedead*
  store %struct.prunedead* %8, %struct.prunedead** %6, align 8
  %9 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %10 = load %struct.prunedead*, %struct.prunedead** %6, align 8
  %11 = getelementptr inbounds %struct.prunedead, %struct.prunedead* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i64 @extract_if_dead(%struct.connectdata* %9, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %17 = load %struct.prunedead*, %struct.prunedead** %6, align 8
  %18 = getelementptr inbounds %struct.prunedead, %struct.prunedead* %17, i32 0, i32 0
  store %struct.connectdata* %16, %struct.connectdata** %18, align 8
  store i32 1, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %15
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @extract_if_dead(%struct.connectdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
